Change to fixed dark mode color, disallow transparent icons

--- a/ruqqus/assets/style/board_dark.scss
+++ b/ruqqus/assets/style/board_dark.scss
@@ -1653,6 +1653,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     text-align: center;
     object-fit: cover;
     color: $white;
+    background-color: #1f2023;
 }
 
 .profile-pic .letter {
@@ -1692,6 +1693,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-25 {
@@ -1700,6 +1702,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-30 {
@@ -1708,6 +1711,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-35 {
@@ -1716,6 +1720,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-40 {
@@ -1724,6 +1729,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-50 {
@@ -1732,6 +1738,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-65 {
@@ -1740,6 +1747,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-75 {
@@ -1748,6 +1756,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-100 {
@@ -1756,6 +1765,7 @@ a.bg-dark:hover, a.bg-dark:focus, button.bg-dark:hover, button.bg-dark:focus {
     border-radius: 50%;
     text-align: center;
     object-fit: cover;
+    background-color: #1f2023;
 }
 
 .profile-pic-overlap {
